# elmes

./: .gitignore  README-en.md  README.md  config.yaml.example  init.py  main.py  pyproject.toml  setup.py
.github/workflows/: sync.yaml
config/: config.yaml  evaluation_backend.yaml.example  test_backend.yaml.example
config/agents/: example.yaml.example
config/prompts/: evaluation_prompts.yaml  scenario_prompts.yaml  task_prompts.yaml
elmes/: agent.py  directions.py  entity.py  router.py  tasks.py
elmes/utils/: __init__.py
src/backend/: __init__.py  base.py  deepseek_backend.py  ollama_backend.py  openai_backend.py
src/elmes/: agent.py  cli.py  config.py  directions.py  entity.py  evaluation.py  model.py  run.py  utils.py
src/evaluator/: __init__.py  base.py  show_score.py
src/executor/: __init__.py  base.py  multi_agent_executor.py  multi_turn_executor.py  single_turn_executor.py
src/prompts/: __init__.py  base.py  contextual_problem.py  guided_teaching.py  knowledge_explanation.py
tests/: test_all_tasks.py  test_backends.py  test_evaluator.py
